[gd_scene load_steps=2 format=3 uid="uid://j4sxthbrdeqh"]

[ext_resource type="Script" uid="uid://i7s7f61u8pt0" path="res://Scripts/menu_in_game.gd" id="1_njg3v"]

[node name="MenuInGame" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_njg3v")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 960.0
offset_bottom = 536.0
color = Color(0, 0, 0, 0.564706)

[node name="BoxContainer" type="BoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -43.0
offset_top = -50.5
offset_right = 43.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1
vertical = true

[node name="Continuar" type="Button" parent="BoxContainer"]
layout_mode = 2
text = "Continuar"

[node name="Menú" type="Button" parent="BoxContainer"]
layout_mode = 2
text = "Menú"

[node name="Sortir" type="Button" parent="BoxContainer"]
layout_mode = 2
text = "Sortir"

[connection signal="pressed" from="BoxContainer/Continuar" to="." method="_on_continuar_pressed"]
[connection signal="pressed" from="BoxContainer/Menú" to="." method="_on_menú_pressed"]
[connection signal="pressed" from="BoxContainer/Sortir" to="." method="_on_sortir_pressed"]
